--- a/index.html
+++ b/index.html
@@ -8,5 +8,17 @@
   </head>
   <body>
     <!-- Your code here -->
+     <img
+       src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" height="350"
+     />
+     <img 
+       src="https://cdn.pixabay.com/photo/2015/12/14/12/36/elephant-1092508_1280.jpg" width="900" height="450"
+       alt="Explore our website for more"
+       />
+       <img 
+         src="https://images.pexels.com/photos/2862070/pexels-photo-2862070.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="800" height="450"
+         alt="Visit Our Page for more"
+         title="We love the scenery"
+         />
   </body>
 </html>
